# LabAgent

./: .env.example  .gitignore  404.html  AGENTS.md  AI_GUIDE.md  CATALOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  paper.bib  paper.md  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
GUI_DEVELOPMENT/: index.html
configs/: common_instruments.yaml  default_safety.yaml  models.yaml
contributing/: index.html
docs/: GUI_DEVELOPMENT.md  contributing.md  index.md
docs/api/: cli.md  mcp.md
docs/features/: analysis.md  discovery.md  guided-experiment.md  planning.md  safety.md  terminal.md  web-gui.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/promotion/: hackernews_post.md  reddit_post.md  twitter_thread.md
docs/templates/: catalog.md  overview.md
examples/: README.md  iv_demo.py
examples/output/: iv_demo.csv  iv_demo.json
features/analysis/: index.html
features/discovery/: index.html
features/guided-experiment/: index.html
features/planning/: index.html
features/safety/: index.html
features/web-gui/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
promotion/hackernews_post/: index.html
promotion/reddit_post/: index.html
promotion/twitter_thread/: index.html
search/: search_index.json
skills/: ahe.md
src/lab_harness/: __init__.py  __main__.py  cli.py  config.py  server.py
src/lab_harness/agent/: budget.py  loop.py
src/lab_harness/analysis/: analyzer.py
src/lab_harness/analysis/templates/: ahe.py  iv.py  mr.py  rt.py
src/lab_harness/campaign/: batch.py
src/lab_harness/discovery/: classifier.py  schemas.py  serial_scanner.py  visa_scanner.py
src/lab_harness/drivers/: biologic_adapter.py  pymeasure_adapter.py  registry.py  zurich_adapter.py
src/lab_harness/export/: exporter.py
src/lab_harness/literature/: paper_pilot_client.py
src/lab_harness/llm/: prompts.py  router.py
src/lab_harness/memory/: learning.py  snapshot.py  store.py
src/lab_harness/models/: instrument.py  measurement.py  safety.py
src/lab_harness/orchestrator/: decider.py  executor.py  flow.py  session.py  simulators.py
src/lab_harness/planning/: boundary_checker.py  parameter_optimizer.py  plan_builder.py  safety_advisor.py
src/lab_harness/reference/: instrument_procedures.py
src/lab_harness/skills/: generator.py  registry.py
src/lab_harness/web/: app.py  session_registry.py
tests/: test_analyzer.py  test_analyzer_literature.py  test_biologic_adapter.py  test_boundary_checker.py  test_budget.py  test_campaign.py  test_classifier.py  test_cli.py  test_config.py  test_engine.py  test_executor.py  test_executor_extended.py  test_executor_p15.py  test_executor_p16.py  test_export.py  test_flow_execution_branch.py  test_manual_lookup.py  test_memory.py  test_models.py  test_plan_builder.py  test_propose_measurement.py  test_pymeasure_adapter.py  test_registry_auto.py  test_session_registry.py  test_simulated_markers.py  test_simulator_analysis_integration.py  test_simulators.py  test_skills.py  test_sse_flow.py  test_visa_scanner.py  test_zurich_adapter.py
(+60 files in other folders)
