[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-agent"
version = "0.1.0"
description = "AI Harness for Lab - Connect AI to your lab instruments. From research question to publication-ready data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anai Guo" },
]
keywords = [
    "laboratory-automation",
    "instrument-control",
    "SCPI",
    "GPIB",
    "pyvisa",
    "AI",
    "MCP",
    "electrochemistry",
    "spectroscopy",
    "photonics",
    "lock-in-amplifier",
    "oscilloscope",
    "potentiostat",
    "transport-measurement",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.12.0,<2",
    "litellm>=1.50.0,<2",
    "pyvisa>=1.14.0,<2",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
tui = [
    "textual>=3.0.0,<4",
    "rich>=13.0.0,<14",
]
web = [
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
]
execution = [
    "pymeasure>=0.14.0,<1",
    "nidaqmx>=1.0.0",
    "pyqtgraph>=0.13.0",
    "MultiPyVu>=3.0.0,<4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
labharness = "lab_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_harness"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
